<?xml version="1.0"?>
<package format="2">
  <name>packetizer</name>
  <version>0.0.0</version>
  <description>The packetizer package</description>

  <maintainer email="contact@drewhamilton.net">Drew Hamilton</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>packetizer_crc_hw</depend>
  <depend>ros_encoding</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
